redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis-data
          emptyDir : {}
        - name: config
          configMap:
            name: example-redis-config
            items:
            - key: redis-config
              path: redis.conf    
      containers:
        - name: redis
          image: redis:7.0.4
          command:
            - redis-server
            - "/redis-master/redis.conf" 
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
            - mountPath: /redis-master
              name: config  
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
    - name: nontls
      protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
